@@ -247,6 +247,8 @@ static KernelInfo *ParseKernelArray(const char *kernel_string)
   kernel->type = UserDefinedKernel;
   kernel->next = (KernelInfo *) NULL;
   kernel->signature = MagickSignature;
+  if (kernel_string == (const char *) NULL)
+    return(kernel);
 
   /* find end of this specific kernel definition string */
   end = strchr(kernel_string, ';');
@@ -499,6 +501,8 @@ MagickExport KernelInfo *AcquireKernelInfo(const char *kernel_string)
   size_t
     kernel_number;
 
+  if (kernel_string == (const char *) NULL)
+    return(ParseKernelArray(kernel_string));
   p = kernel_string;
   kernel = NULL;
   kernel_number = 0;
@@ -604,7 +608,7 @@ MagickExport KernelInfo *AcquireKernelInfo(const char *kernel_string)
 %        The result is a zero-summing kernel.
 %
 %    Blur:{radius},{sigma}[,{angle}]
-%       Generates a 1-dimensional or linear gaussian blur, at the angle given
+%       Generates a 1 dimensional or linear gaussian blur, at the angle given
 %       (current restricted to orthogonal angles).  If a 'radius' is given the
 %       kernel is clipped to a width of 2*radius+1.  Kernel can be rotated
 %       by a 90 degree angle.
@@ -2564,7 +2568,6 @@ static ssize_t MorphologyPrimitive(const Image *image, Image *result_image,
       break;
   }
 
-
   if ( method == ConvolveMorphology && kernel->width == 1 )
   { /* Special handling (for speed) of vertical (blur) kernels.
     ** This performs its handling in columns rather than in rows.
@@ -3145,7 +3148,9 @@ static ssize_t MorphologyPrimitive(const Image *image, Image *result_image,
   GrayErode    is equivalent but with kernel values subtracted from pixels
                without the kernel rotation
   GreyDilate   is equivalent but using Maximum() instead of Minimum()
-               useing kernel rotation
+               using kernel rotation
+
+  It has thus been preserved for future implementation of those methods.
 
         case DistanceMorphology:
             /* Add kernel Value and select the minimum value found.
@@ -4381,7 +4386,6 @@ static void RotateKernelInfo(KernelInfo *kernel, double angle)
     /* These only allows a +/-90 degree rotation (by transpose) */
     /* A 180 degree rotation is useless */
     case BlurKernel:
-    case RectangleKernel:
       if ( 135.0 < angle && angle <= 225.0 )
         return;
       if ( 225.0 < angle && angle <= 315.0 )
@@ -4391,7 +4395,7 @@ static void RotateKernelInfo(KernelInfo *kernel, double angle)
     default:
       break;
   }
-  /* Attempt rotations by 45 degrees */
+  /* Attempt rotations by 45 degrees  -- 3x3 kernels only */
   if ( 22.5 < fmod(angle,90.0) && fmod(angle,90.0) <= 67.5 )
     {
       if ( kernel->width == 3 && kernel->height == 3 )
@@ -4426,7 +4430,7 @@ static void RotateKernelInfo(KernelInfo *kernel, double angle)
   if ( 45.0 < fmod(angle, 180.0)  && fmod(angle,180.0) <= 135.0 )
     {
       if ( kernel->width == 1 || kernel->height == 1 )
-        { /* Do a transpose of a 1-dimensional kernel,
+        { /* Do a transpose of a 1 dimensional kernel,
           ** which results in a fast 90 degree rotation of some type.
           */
           ssize_t
@@ -4721,16 +4725,16 @@ MagickExport void ScaleKernelInfo(KernelInfo *kernel,
 %
 %  The format of the ShowKernel method is:
 %
-%      void ShowKernelInfo(KernelInfo *kernel)
+%      void ShowKernelInfo(const KernelInfo *kernel)
 %
 %  A description of each parameter follows:
 %
 %    o kernel: the Morphology/Convolution kernel
 %
 */
-MagickExport void ShowKernelInfo(KernelInfo *kernel)
+MagickExport void ShowKernelInfo(const KernelInfo *kernel)
 {
-  KernelInfo
+  const KernelInfo
     *k;
 
   size_t
